tests/semantic/valid/for_block.c
/*
 * Multi-line comment.
 */


int32_t main() {
    int32_t a = 1;
    int32_t b = 2;
    int32_t c = 4;

    for (6;6;6) {
        1;
        2;
        3;
    }

    return 0;

}